# wikipedia-flashcards-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/: __init__.py  cli.py  models.py
src/agents/: __init__.py  flashcards.py  summary.py  wikipedia_search.py
